[package]
name = "egui-phosphor"
description = "Phosphor icons for egui"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amPerl/egui-phosphor"

[dependencies]
egui = { path = "../../egui/crates/egui", default-features = false }

[features]
default = ["regular"]
thin = []
light = []
regular = []
bold = []
fill = []

[dev-dependencies]
eframe = { path = "../../egui/crates/eframe" }

[[example]]
name = "multiple_variants"
required-features = ["thin", "light", "regular", "bold", "fill"]
